--- a/maven-wed-app-deploy-yml.yml
+++ b/maven-wed-app-deploy-yml.yml
@@ -1,38 +1,32 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: mavenwebappdeployment
+  name: maven-web-app
 spec:
- replicas: 2
- strategy: 
-    type: Recreate
- selector: 
-   matchLabels: 
-     app: mavenwebapp
- template:
-  metadata:
-   name: mavenwebapppod
-   labels:
-     app: mavenwebapp	 
-  spec: 
-    containers:
-    - name: mavenwebappcontainer
-      image: rakesh/maven-web-app:v3
-      imagePullPolicy: Always
-      ports:
-      - containerPort: 8080
+  replicas: 1
+  selector:
+    matchLabels:
+      app: maven-web-app
+  template:
+    metadata:
+      labels:
+        app: maven-web-app
+    spec:
+      containers:
+      - name: maven-web-app
+        image: rakesh/mavenwebapp:latest
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: mavenwebappsvc
+  name: maven-web-app-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-   app: mavenwebapp
+    app: maven-web-app
   ports:
-   - port: 80
-     targetPort: 8080
-...
-
+  - port: 80
+    targetPort: 8080
+    nodePort: 30007
