--- a/maven-wed-app-deploy-yml.yml
+++ b/maven-wed-app-deploy-yml.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: maven-web-app
 spec:
-  replicas: 1
+  replicas: 2                    # ✅ Increased for HA
   selector:
     matchLabels:
       app: maven-web-app
@@ -14,19 +14,26 @@ spec:
     spec:
       containers:
       - name: maven-web-app
-        image: rakesh/mavenwebapp:latest
+        image: rakesh/mavenwebapp:latest     # ✅ Matches Jenkins DOCKER_TAG
         ports:
         - containerPort: 8080
+        resources:                           # ✅ Resource limits
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: maven-web-app-service
 spec:
-  type: NodePort
+  type: LoadBalancer              # ✅ Changed from NodePort for EKS (auto ELB)
   selector:
     app: maven-web-app
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 30007
+    # nodePort: 30007              # ✅ Removed (not needed for LoadBalancer)
