--- a/maven-wed-app-deploy.yml
+++ b/maven-wed-app-deploy.yml
@@ -1,39 +1,37 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: maven-web-app
+ name: mavenwebappdeployment
 spec:
-  replicas: 2                    # ✅ Increased for HA
-  selector:
-    matchLabels:
-      app: maven-web-app
-  template:
-    metadata:
-      labels:
-        app: maven-web-app
-    spec:
-      containers:
-      - name: maven-web-app
-        image: rakesh/mavenwebapp:latest     # ✅ Matches Jenkins DOCKER_TAG
-        ports:
-        - containerPort: 8080
-        resources:                           # ✅ Resource limits
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
+ replicas: 2
+ strategy: 
+    type: Recreate
+ selector: 
+   matchLabels: 
+     app: mavenwebapp
+ template:
+  metadata:
+   name: mavenwebapppod
+   labels:
+     app: mavenwebapp	 
+  spec: 
+    containers:
+    - name: mavenwebappcontainer
+      image: Subicksha/maven-web-app:v3
+      imagePullPolicy: Always
+      ports:
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: maven-web-app-service
+ name: mavenwebappsvc
 spec:
-  type: LoadBalancer              # ✅ Changed from NodePort for EKS (auto ELB)
+  type: LoadBalancer
   selector:
-    app: maven-web-app
+   app: mavenwebapp
   ports:
-  - port: 80
-    targetPort: 8080
-    # nodePort: 30007              # ✅ Removed (not needed for LoadBalancer)
+   - port: 80
+     targetPort: 8080
+...
