--- a/maven-wed-app-deploy.yml
+++ b/maven-wed-app-deploy.yml
@@ -18,7 +18,7 @@ spec:
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: Subicksha/maven-web-app:v3
+      image: rakesh/maven-web-app:v3
       imagePullPolicy: Always
       ports:
       - containerPort: 8080
@@ -35,3 +35,4 @@ spec:
    - port: 80
      targetPort: 8080
 ...
+
