--- a/maven-wed-app-deploy.yml
+++ b/maven-wed-app-deploy.yml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mavenwebappcontainer
-        image: rakesh/mavenwebapp:latest
+        image: rakesh/maven-web-app:v3
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -27,7 +26,6 @@ spec:
             port: 8080
           initialDelaySeconds: 15
           periodSeconds: 5
-
 ---
 apiVersion: v1
 kind: Service
@@ -38,6 +36,6 @@ spec:
   selector:
     app: mavenwebapp
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
