--- a/maven-wed-app-deploy.yml
+++ b/maven-wed-app-deploy.yml
@@ -1,41 +1,37 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mavenwebappdeployment
+ name: mavenwebappdeployment
 spec:
-  replicas: 2
-  strategy:
-    type: RollingUpdate
-  selector:
-    matchLabels:
-      app: mavenwebapp
-  template:
-    metadata:
-      labels:
-        app: mavenwebapp
-    spec:
-      containers:
-      - name: mavenwebappcontainer
-        image: rakesh/maven-web-app:v3
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 5
+ replicas: 2
+ strategy: 
+    type: Recreate
+ selector: 
+   matchLabels: 
+     app: mavenwebapp
+ template:
+  metadata:
+   name: mavenwebapppod
+   labels:
+     app: mavenwebapp	 
+  spec: 
+    containers:
+    - name: mavenwebappcontainer
+      image: ashokit/maven-web-app:v3
+      imagePullPolicy: Always
+      ports:
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mavenwebappsvc
+ name: mavenwebappsvc
 spec:
   type: LoadBalancer
   selector:
-    app: mavenwebapp
+   app: mavenwebapp
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
+   - port: 80
+     targetPort: 8080
+...
